--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <h3 style="margin-top:0;">Google Gemini App</h3>
         <p>It’s like Gemini, but in your own world. Streamlined AI magic in app form.</p>
         <a href="source/Genimi.EXE" style="color:#0078d7;">[ Download Gemini App ]</a>
-        <a href="https://www.mediafire.com/file/fpt4ca251u9int9/Genimi1.0SC.zip/file" style="color:#0078d7;">[ Download Gemini App ]</a>
+        <a href="https://www.mediafire.com/file/fpt4ca251u9int9/Genimi1.0SC.zip/file" style="color:#0078d7;">[ Download Sorce Code ]</a>
       </td>
     </tr>
     <tr>
